--- a/pages/styleContacto.css
+++ b/pages/styleContacto.css
@@ -77,7 +77,16 @@ main {
   height: 3rem;
   text-align: center;
   margin-bottom: 1rem;
+  
 }
+.buttonEnviar {
+  background-color: var(--dark-primary);
+  cursor: pointer;
+}
+.buttonEnviar:hover {
+  background-color: var(--gray-op-2);
+}
+
 
 .btnVolver {
   width: 6rem;
