--- a/pages/styleVerMas.css
+++ b/pages/styleVerMas.css
@@ -9,17 +9,25 @@
 
 body {
   width: 100%;
-  height: 95%;
-  flex-direction: column;
+  height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
   background-image: url("../images/stock/project1/a4.png");
   backdrop-filter: blur(8px);
   background-size: cover;
   background-position: center;
-
   background-repeat: no-repeat;
+}
+
+.logo {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 15vh;
+  margin-top: 0;
 }
 
 .logoNav {
@@ -34,6 +42,15 @@ body {
   100% {
     transform: rotateY(-180deg);
   }
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  height: 70vh;
 }
 
 .btnVolver {
@@ -54,39 +71,9 @@ i {
   margin-right: 0.3rem;
 }
 
-article {
-  padding: 1rem;
-  border: 1px solid #ccc;
-}
-
-.comments {
-  margin-top: 2rem;
-}
-
-.comment {
-  display: flex;
-  align-items: center;
-  margin-bottom: 1.5rem;
-  padding: 10px;
-  border: 1px solid #eee;
-  border-radius: 5px;
-}
-
-.comment img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-
-.comment-content {
-  flex: 1;
-}
-
 .footer {
   width: 100%;
-  height: 5%;
-  height: 5rem;
+  height: 15vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -99,11 +86,23 @@ article {
 }
 
 /* Media Queries */
-@media (max-width: 500px) {
-  .article {
-    margin-inline: var(--distance-3);
+@media (max-width: 612px) {
+  iframe {
+    width: 500px;
+    height: 300px;
   }
-  .comments {
-    margin-inline: var(--distance-3);
+}
+
+@media (max-width: 500px) {
+  iframe {
+    width: 400px;
+    height: 250px;
+  }
+}
+
+@media (max-width: 400px) {
+  iframe {
+    width: 300px;
+    height: 250px;
   }
 }
