--- a/pages/styleblog.css
+++ b/pages/styleblog.css
@@ -9,7 +9,7 @@
 
 body {
   width: 100%;
-  height: 100%;
+  height: 95%;
   flex-direction: column;
   display: flex;
   justify-content: center;
@@ -20,10 +20,6 @@ body {
   background-position: center;
 
   background-repeat: no-repeat;
-}
-
-.logo {
-  height: 5%;
 }
 
 .logoNav {
@@ -40,54 +36,12 @@ body {
   }
 }
 
-main {
-  text-align: center;
-}
-.contacto {
-  width: 20rem;
-  height: 90%;
+.blog {
+  width: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-}
 
-.form {
-  width: 19rem;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 1rem;
-  border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.637);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.h2Contacto {
-  width: 19rem;
-  height: 2.5rem;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-  font-size: 2rem;
-  margin-bottom: 0.5rem;
-  background-color: rgba(255, 255, 255, 0.637);
-}
-
-.inputForm {
-  width: 18rem;
-  height: 3rem;
-  text-align: center;
-  margin-bottom: 1rem;
-}
-.buttonEnviar {
-  background-color: var(--dark-primary);
-  cursor: pointer;
-}
-.buttonEnviar:hover {
-  background-color: var(--gray-op-2);
 }
 
 .btnVolver {
@@ -108,9 +62,39 @@ i {
   margin-right: 0.3rem;
 }
 
+article {
+  padding: 1rem;
+  border: 1px solid #ccc;
+}
+
+.comments {
+  margin-top: 2rem;
+}
+
+.comment {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.5rem;
+  padding: 10px;
+  border: 1px solid #eee;
+  border-radius: 5px;
+}
+
+.comment img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.comment-content {
+  flex: 1;
+}
+
 .footer {
   width: 100%;
   height: 5%;
+  height: 5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -122,18 +106,17 @@ i {
   margin-bottom: 0;
 }
 
-@media (max-width: 374px) {
-  .contacto {
-    width: 18rem;
+/* Media Queries */
+@media (max-width: 600px) {
+  .article {
+    margin-inline: var(--distance-3);
   }
-  .form {
-    width: 18rem;
-  }
-  .h2Contacto {
-    width: 18rem;
+  .comments {
+    margin-inline: var(--distance-3);
   }
 
-  .inputForm {
-    width: 17rem;
+  .blog img {
+ margin-inline: 1rem;
   }
+ 
 }
