--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: var(--primary);
+}
+
 .logoNav {
   filter: drop-shadow(0 0 5px var(--gray-2));
   animation: rotateLogo 6s linear infinite;
@@ -32,6 +36,8 @@
 }
 .image-main img {
   height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .imgPortfofio {
@@ -41,6 +47,9 @@
   align-items: center;
 }
 
+.buttonCard {
+  border: solid 1px white;
+}
 .card {
   width: 100%;
   min-height: 350px;
@@ -54,6 +63,8 @@
   filter: brightness(90%);
   transition: all 0.2s ease-in-out;
   z-index: -1;
+  object-fit: cover;
+  width: 100%;
 }
 .card .content {
   display: none;
@@ -148,6 +159,7 @@
   .main {
     margin-top: 10rem;
   }
+
   .title {
     font-size: var(--size-5);
   }
@@ -163,6 +175,4 @@
   .imgCorta {
     height: 100%;
   }
-  
-
 }
