--- a/pages/styleVerMas.css
+++ b/pages/styleVerMas.css
@@ -9,24 +9,29 @@
 
 body {
   width: 100%;
-  height: 100vh;
+  height: 95%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  background-image: url("../images/stock/project1/a4.png");
-  backdrop-filter: blur(8px);
+  background-image: url("../images/stock/project2/a1.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-.logo {
+.logos {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 15vh;
+}
+
+.logo {
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 0;
 }
 
@@ -46,11 +51,11 @@ body {
 
 .main {
   display: flex;
+  height: 75vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 2rem;
-  height: 70vh;
 }
 
 .btnVolver {
@@ -72,17 +77,15 @@ i {
 }
 
 .footer {
-  width: 100%;
-  height: 15vh;
+  height: 5%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 0.5rem 0;
-  text-align: center;
+
   font-size: 14px;
   color: #333;
-  margin-bottom: 0;
+  margin-bottom: 0px;
 }
 
 /* Media Queries */
