--- a/pages/styleblog.css
+++ b/pages/styleblog.css
@@ -14,8 +14,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("../images/stock/project1/a4.png");
-  backdrop-filter: blur(8px);
+  background-image: url("../images/stock/project2/a1.jpg");
+
   background-size: cover;
   background-position: center;
 
@@ -41,7 +41,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .btnVolver {
@@ -78,6 +77,7 @@ article {
   padding: 10px;
   border: 1px solid #eee;
   border-radius: 5px;
+  background-color: rgba(128, 128, 128, 0.4);
 }
 
 .comment img {
@@ -116,7 +116,6 @@ article {
   }
 
   .blog img {
- margin-inline: 1rem;
+    margin-inline: 1rem;
   }
- 
 }
