--- a/style.css
+++ b/style.css
@@ -16,9 +16,20 @@ body {
   }
 }
 
-#header {
-  min-height: 5rem;
+header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-block: 2rem;
   z-index: 10;
+}
+.abrir,
+.cerrar {
+  display: none;
+}
+
+main {
+  top: 7.5rem;
 }
 
 .divMain {
@@ -38,6 +49,10 @@ body {
   height: 100%;
   width: 100%;
   object-fit: cover;
+}
+
+#portfolio {
+  margin-top: 9rem;
 }
 
 .imgPortfofio {
@@ -151,13 +166,60 @@ body {
     filter: brightness(90%);
   }
 }
+@media screen and (max-width: 600px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    gap: 0.5rem;
+  }
+  .abrir,
+  .cerrar {
+    display: block;
+    border: 0;
+    font-size: 2rem;
+    cursor: pointer;
+    background-color: transparent;
+    color: var(--white);
+  }
+
+  .nav {
+    opacity: 0;
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    gap: 1rem;
+    position: absolute;
+    top: 5.5rem;
+    right: auto;
+    background-color: var(--dark-primary);
+    padding: 1.5rem;
+    z-index: 10;
+  }
+
+  .nav.visible {
+    opacity: 1;
+    visibility: visible;
+    border-radius: 30px;
+    padding-top: 0;
+  }
+
+  .navlist {
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
 
 @media (max-width: 500px) {
-  #header {
-    padding-block: 1rem;
-  }
-  .main {
-    margin-top: 10rem;
+  main {
+    top: 7.5rem;
   }
 
   .title {
