--- a/pages/styleContacto.css
+++ b/pages/styleContacto.css
@@ -9,16 +9,14 @@
 
 body {
   width: 100%;
-height: 95%;
   flex-direction: column;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   background-image: url("../images/stock/project1/a4.png");
   background-size: cover;
   background-position: center;
-
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
 }
 
 .logo {
@@ -51,7 +49,6 @@ main {
 
 .form {
   width: 19rem;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -107,7 +104,7 @@ i {
 
 .footer {
   width: 100%;
-  height: 5%;
+  height: 5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -116,7 +113,7 @@ i {
   text-align: center;
   font-size: 14px;
   color: #333;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 @media (max-width: 374px) {
