--- a/style.css
+++ b/style.css
@@ -217,6 +217,80 @@ main {
     justify-content: center;
     align-items: center;
   }
+
+  .card {
+    width: 100%;
+    min-height: 350px;
+    position: relative;
+    transition: all 0.2s ease-in-out;
+    padding-inline: 0.1rem;
+  }
+  .card img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: brightness(90%);
+    transition: all 0.2s ease-in-out;
+    z-index: -1;
+    object-fit: cover;
+    width: 100%;
+  }
+  .card .content {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: var(--distance-5);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    z-index: 10;
+    padding-inline: 1rem;
+  }
+  .card h3 {
+    color: var(--white);
+    font-size: 1.8rem;
+    font-weight: 700;
+    margin-bottom: 0.8rem;
+  }
+
+  .card span {
+    color: var(--white);
+    font-size: var(--size-2);
+    font-weight: 700;
+  }
+
+  .card p {
+    max-width: 100%;
+    opacity: 1;
+    color: white !important;
+    font-size: var(--size-1);
+    font-weight: 400;
+  }
+
+  .card a {
+    max-width: 100%;
+    opacity: 1;
+    font-weight: 700;
+    font-size: var(--size-2);
+  }
+
+  .card:hover .content {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: var(--distance-5);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    z-index: 10;
+    padding-inline: 1rem;
+  }
+  .card img {
+    filter: brightness(55%);
+  }
+  .card:hover img {
+    filter: brightness(55%);
+  }
 }
 
 @media (max-width: 500px) {
